infra/sc-auth-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sc-auth
  labels:
    name: sc-auth
