infra/sc-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc-auth
  namespace: sc-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sc-auth
  template:
    metadata:
      labels:
        app: sc-auth
    spec:
      containers:
      - name: sc-auth
        image: sahalaww/sc-auth:v0.2.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          failureThreshold: 3
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
