infra/sc-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-auth-svc
  namespace: sc-auth
spec:
  type: NodePort
  selector:
    app: sc-auth
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
